Day 47/ques/3-tire-stack/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapps
  labels:
    app: myapp
spec: {}
status: {}
