Day 47/ques/3-tire-stack/db-sts.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: myapp
    role: db
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app: myapp
    role: db

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-db
spec:
  selector:
    matchLabels:
      app: myapp
      role: db
  serviceName: "mysql-svc"
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        role: db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: mysql

---
